@startuml

title __MODELE's Class Diagram__\n

  package modele {
    class Carte {
        # valeur : int
        # Carte()
        + getCategorie()
        + getValeur()
    }
  }
  

  package modele {
    abstract class Categorie {
        # Categorie()
        + getCouleur()
        {abstract} + toString()
    }
  }
  

  Carte o-- Categorie : categ
  Categorie o-- Couleur : couleur


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
